@@ -5,7 +5,7 @@
 #define INPUT_H 
 
 #include "types.h"
-#include "bitmap.h"
+#include "autotrace.h"
 
 #if HAVE_LIBPNG
 #define PNG_SUFFIX "png, "
@@ -21,7 +21,7 @@
 
 #define INPUT_SUFFIX_LIST PNG_SUFFIX MAGICK_SUFFIX "tga, pbm, pnm, pgm, ppm or bmp"
 
-typedef bitmap_type (*input_read) (string name);
+typedef at_input_read_func input_read;
 input_read input_get_handler (string filename);
 input_read input_get_handler_by_suffix (string suffix);
 char ** input_list (void);
